# telegram-bot

./: .coverage  .dockerignore  .env.example  .gitignore  D0_VERIFICATION_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOY_TO_SERVER.md  DOCKER_ORCHESTRATION_README.md  DOCKER_QUICKSTART.md  DOCKER_SETUP_SUMMARY.md  Dockerfile.api  Dockerfile.bot  Dockerfile.frontend  ENV_EXAMPLE.txt  Makefile  QUICKSTART.md  README.md  SPRINT_D0_SUMMARY.md  SPRINT_D1_SUMMARY.md  SPRINT_F1_SUMMARY.md  SPRINT_F2_SUMMARY.md  SPRINT_F3_SUMMARY.md  SPRINT_F4_SUMMARY.md  SPRINT_F4_TEST_RESULTS.md  alembic.ini  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.registry.yml  docker-compose.yml  pyproject.toml  transfer-to-server.ps1  transfer-to-server.sh
.cursor/commands/: review.md
.cursor/plans/: frontend-init-sprint-f2-22d58d84.plan.md  mock-api-sprint-f1-0aca0d14.plan.md  sprint-4-ai-chat-cb352fec.plan.md  sprint-d1-build-publish-5cecb0b2.plan.md  sprint-f3-dashboard-f40776af.plan.md
.cursor/rules/: conventions.mdc  qa_conventions.mdc  workflow.mdc  workflow_tdd.mdc
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 3a933d9e6d4b_initial_schema.py
devops/doc/: D0_FIXES_AND_IMPROVEMENTS.md  D0_IMPLEMENTATION_REPORT.md  D1_COMPLETION_SUMMARY.md  D1_FILES_OVERVIEW.md  D1_FIRST_RUN_CHECKLIST.md  D1_GIT_COMMIT_GUIDE.md  D1_IMPLEMENTATION_REPORT.md  D1_README.md  devops-roadmap.md
doc/: SPRINT_F4_QUICKSTART.md  api-contract-example.json  api-examples.md  dashboard-requirements.md  frontend-roadmap.md  sprint-f1-completed.md
docs/: @idea.md  @vision.md  conventions.md  idea.md  roadmap.md  tasklist.md  tasklist_tech_debt.md  vision.md  workflow.md  workflow_tech_debt.md
docs/guides/: 03_data_model.md  (+13 more)
frontend/: .dockerignore  .gitignore  README.md  README_old.md  package.json  pnpm-lock.yaml
prompts/: music_consultant.txt
secrets/: .gitkeep  README.md
src/: __init__.py  api_main.py  bot.py  config.py  database.py  dialog_manager.py  handler.py  llm_client.py  main.py  message_repository.py
tests/: conftest.py
(+56 files in other folders)
